Fixed: Center Collapsed Essentials

--- a/sidebar-expand-on-hover/chrome.css
+++ b/sidebar-expand-on-hover/chrome.css
@@ -2,7 +2,10 @@
     /*--theme-sidebar_expand_on_hover-essentials_expanded_tab_width: 75px; /*to-do, - should be actual width of each essential tab, should only be adjusted if some other mod changes the tab size*/
     --theme-sidebar_expand_on_hover-essentials_collapsed_tab_margin: 0px; /*adjust vertical spacing between each essential tab*/
     --theme-sidebar_expand_on_hover-essentials_collapsed_columns: 2; /*adjustable number of columns*/
-    --theme-sidebar_expand_on_hover-essentials_collapsed_width: calc(var(--theme-sidebar_expand_on_hover-expanded_width) / var(--theme-sidebar_expand_on_hover-essentials_collapsed_columns)); /*Expanded Sidebar width / Convert columns to px*/
+    --theme-sidebar_expand_on_hover-essentials_collapsed_width: calc(
+        var(--theme-sidebar_expand_on_hover-expanded_width) /
+            var(--theme-sidebar_expand_on_hover-essentials_collapsed_columns)
+    ); /*Expanded Sidebar width / Convert columns to px*/
     /* ^ Make value adjustable friendly as columns later?
   75px (1 grid)
   150px (2 grid)
@@ -294,10 +297,13 @@
             }
 
             /* Move sidebar content up and down when bookmark toolbar is shown */
-            #zen-sidebar-top-buttons:not([customizing]){
+            #zen-sidebar-top-buttons:not([customizing]) {
                 /*                 On Toolbar: 38px - 30px = 8px  ->  Moves collapsed sidebar content DOWN
                     Not on toolbar: [unset value] - 30px = -30px  ->  Collapsed sidebar content UP */
-                margin-top: calc(var(--zen-toolbar-height-with-bookmarks) - var(--zen-toolbar-height)) !important;
+                margin-top: calc(
+                    var(--zen-toolbar-height-with-bookmarks) -
+                        var(--zen-toolbar-height)
+                ) !important;
             }
 
             /* Hide empty top buttons */
@@ -306,7 +312,10 @@
             #zen-sidebar-top-buttons-customization-target > #zen-sidebar-top-buttons-separator:only-child /* Sometimes this toolbar item shows up by itself, no idea why*/
             ) {
                 /* Remove unnecessary empty space (-30px) */ /* and Move collapsed sidebar content up and down when bookmark toolbar is shown */
-                margin-top: calc(-30px + var(--zen-toolbar-height-with-bookmarks) - var(--zen-toolbar-height)) !important;
+                margin-top: calc(
+                    -30px + var(--zen-toolbar-height-with-bookmarks) -
+                        var(--zen-toolbar-height)
+                ) !important;
             }
 
             #zen-sidebar-bottom-buttons,
@@ -670,6 +679,11 @@ Sidebar Expand on Hover Experimental Features
         }
 
         .zen-essentials-container {
+            /* Center collapsed essentials container */
+            left: 0 !important;
+            /* Same thing
+            margin-left: var(--zen-toolbox-padding) !important;*/
+
             transition:
                 transform var(--theme-sidebar_expand_on_hover-transition_speed)
                     ease-out,
@@ -678,7 +692,9 @@ Sidebar Expand on Hover Experimental Features
                 --theme-sidebar_expand_on_hover-essentials_collapsed_width
             ) !important; /* adjustable - horizontal spacing*/
 
-            transform: scaleX(0.25) !important; /* Squish Essentials to fit into collapsed sidebar */
+            transform: scaleX(
+                0.25
+            ) !important; /* Squish Essentials to fit into collapsed sidebar */
             transform-origin: top left !important;
             height: var(
                 --theme-sidebar_expand_on_hover-essentials_collapsed_tab_height
@@ -696,7 +712,9 @@ Sidebar Expand on Hover Experimental Features
                 margin-left: 15px !important;
                 background: none !important;
 
-                transform: scaleX(4) !important; /* Undo Essentials Tab **Icon** Squishing */
+                transform: scaleX(
+                    4
+                ) !important; /* Undo Essentials Tab **Icon** Squishing */
             }
 
             /*
@@ -710,7 +728,6 @@ Sidebar Expand on Hover Experimental Features
               }
             */
         }
-
 
         .zen-essentials-container > .tabbrowser-tab,
         #zen-welcome-initial-essentials-browser-sidebar-essentials
